--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -19,7 +19,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create build
-        run: make ${{ matrix.target }} CXX=${{ matrix.compiler }}
+        run: |
+         mkdir build
+         make ${{ matrix.target }} CXX=${{ matrix.compiler }}
          
   Windows:
     runs-on: windows-2022
@@ -43,4 +45,6 @@ jobs:
 
       - name: Create build
         shell: msys2 {0}
-        run: make ${{ matrix.target }} CXX=${{ matrix.config.compiler }}
+        run: |
+         mkdir build
+         make ${{ matrix.target }} CXX=${{ matrix.config.compiler }}
