--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -58,4 +58,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with: 
          name: lishex-win64
-         path: ./lishex    
+         path: ./lishex.exe
